recursion exercises and queues/factorials added with folder listing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,6 @@ set(CMAKE_CXX_STANDARD 23)
 add_executable(queues queues/main.cpp)
 add_executable(smart_pointers smart_pointers/main.cpp)
 add_executable(stacks stacks/stacks.cpp)
+add_executable(palindrome palindrome/palindrome.cpp)
+add_executable(factorial factorial/factorial.cpp)
+add_executable(list_folders list_folders/list_folders.cpp)
