--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(stacks stacks/stacks.cpp)
 add_executable(palindrome palindrome/palindrome.cpp)
 add_executable(factorial factorial/factorial.cpp)
 add_executable(list_folders list_folders/list_folders.cpp)
+add_executable(binary_search_tree binary_search_tree/main.cpp)
