bubble_sort added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(palindrome palindrome/palindrome.cpp)
 add_executable(factorial factorial/factorial.cpp)
 add_executable(list_folders list_folders/list_folders.cpp)
 add_executable(binary_search_tree binary_search_tree/main.cpp)
+add_executable(bubble_sort bubble_sort/bubble.cpp)
