shell_sort added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ add_executable(factorial factorial/factorial.cpp)
 add_executable(list_folders list_folders/list_folders.cpp)
 add_executable(binary_search_tree binary_search_tree/main.cpp)
 add_executable(bubble_sort bubble_sort/bubble.cpp)
+add_executable(selection_sort selection_sort/selection.cpp)
+add_executable(insert_sort insert_sort/insertion.cpp)
+add_executable(shell_sort shell_sort/shell.cpp)
