merge_sort added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,5 @@ add_executable(bubble_sort bubble_sort/bubble.cpp)
 add_executable(selection_sort selection_sort/selection.cpp)
 add_executable(insert_sort insert_sort/insertion.cpp)
 add_executable(shell_sort shell_sort/shell.cpp)
+add_executable(merge_sort merge_sort/main.cpp)
+add_executable(quick_sort quick_sort/main.cpp)
